force-app/main/default/objects/Account/fields/BillingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>BillingCountryCode__c</fullName>
    <label>BillingCountryCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>