force-app/main/default/objects/Account/fields/Customer_In_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_In_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer In Group</label>
    <type>Checkbox</type>
</CustomField>