force-app/main/default/objects/Account/fields/HubSpot_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Company_ID__c</fullName>
    <externalId>true</externalId>
    <label>HubSpot Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>