force-app/main/default/objects/Account/fields/Is_Internal_Group__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Internal Group</label>
    <type>Checkbox</type>
</CustomField>